--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,11 @@ packages = [
     "rerankers.integrations",
 ]
 
+[[tool.poetry.source]]
+name = "mirrors"
+url = "https://pypi.tuna.tsinghua.edu.cn/simple"
+priority = "primary"
+
 [project]
 name = "rerankers" 
 
